--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,9 @@
   </script>
   <canvas id="canvas"></canvas>
   <style>
+      body {
+        background: black;
+      }
       canvas {
           background-color: purple;
       }
